Run pipeline with Logistic Regression results

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,7 +2,7 @@ stages:
   preprocess:
     cmd: python preprocess.py
     deps:
-      -             
+      - preprocess.py
       - data/diabetes.csv
     outs:
       - data/train.csv
